<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_file_name_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/main_file_name_label" />

        <TextView
            android:id="@+id/main_file_name_output"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/blank" />

        <TextView
            android:id="@+id/main_write_text_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/main_file_edit_label" />

        <EditText
            android:id="@+id/main_file_edit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/main_file_edit_hint" />

        <Button
            android:id="@+id/main_add_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="addToFile"
            android:text="@string/main_file_add_button" />

        <Button
            android:id="@+id/main_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:onClick="deleteFile"
            android:text="@string/main_file_delete_button" />

        <TextView
            android:id="@+id/main_file_edit_output_label"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/main_file_edit_output_label" />

        <TextView
            android:id="@+id/main_file_read_output"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/blank" />

        <TextView
            android:id="@+id/main_file_edit_output"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/main_file_edit_output" />
    </LinearLayout>

</ScrollView>