<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/SQL_add_button" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/SQL_delete_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/SQL_edit_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SQL_edit_name_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/SQL_edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SQL_edit_name_hint"
        android:inputType="textPersonName" >
    </EditText>

    <TextView
        android:id="@+id/SQL_edit_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SQL_edit_number_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/SQL_edit_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/SQL_edit_number_hint"
        android:inputType="phone" >
    </EditText>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>