<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/settings_file_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_file_name_label" />

        <TextView
            android:id="@+id/settings_file_name_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/settings_file_name_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />

        <Button
            android:id="@+id/settings_file_name_buttob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="fileNameAddClick"
            android:text="@string/settings_file_name_in_button" />

        <TextView
            android:id="@+id/settings_shared1_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_shared1_key_label" />

        <TextView
            android:id="@+id/Settings_shared_out1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/Settings_pref1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />

        <Button
            android:id="@+id/settings_shared1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings_shared1_button_label" />

        <TextView
            android:id="@+id/settings_shared2_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_shared2_key_label" />

        <TextView
            android:id="@+id/Settings_shared_out2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/Settings_pref2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:inputType="text" />

        <Button
            android:id="@+id/settings_shared2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings_shared2_button" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_SQL_table_name_label" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="text" />

        <Button
            android:id="@+id/settings_SQL_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings_SQL_button" />
    </LinearLayout>

</ScrollView>